k8s/entertainment/yarr/templates/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: gists/transmission:latest
          ports:
            - containerPort: 9091
            - containerPort: 51413
            - containerPort: 51413
              protocol: UDP
          volumeMounts:
            - name: pvc-config
              mountPath: /data/.config
            - name: storage
              mountPath: /storage
      restartPolicy: Always
      volumes:
        - name: pvc-config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: storage
          hostPath:
            path: /media/SSD2
            type: Directory
