k8s/entertainment/yarr/templates/transmission/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-system-sso@kubernetescrd,traefik-system-security@kubernetescrd'
    traefik.ingress.kubernetes.io/router.tls: 'true'
  name: transmission
spec:
  rules:
    - host: transmission.fmlab.no
      http:
        paths:
          - backend:
              service:
                name: transmission
                port:
                  number: 9091
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - transmission.fmlab.no
      secretName: certificate-transmission
